@@ -29,6 +29,8 @@ Version 1.5 (not yet released)
 - saving PO files no longer reformats source code references (#323);
   moreover, they are always formatted according to the default style
   used by GNU gettext tools (#348)
+- don't restore remembered window positions if they are outside currently
+  available screens (#318)
 
 
 Version 1.4.6
